# arbibot-dashboard

./: .gitignore  .vercelignore  README.md  debug_px_hist.py  debug_ws.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.git_backup/: COMMIT_EDITMSG  config  index
.git_backup/info/: refs
.git_backup/logs/: HEAD
.git_backup/logs/refs/heads/: main
.git_backup/objects/info/: commit-graph  packs
.git_backup/objects/pack/: pack-382bc30fce989a8e79ec90f425e94243fabb8e41.idx
.git_backup/refs/heads/: main
app/: globals.css  layout.tsx  page.tsx
app/api/history/: route.ts
app/arbitrage-prices/: page.tsx
app/fundings-rate/: page.tsx
app/open-interest/: page.tsx
app/trading-analysis/: page.tsx
bot/: .env.example  backtest_spread.py  config.py  debug_feeds.py  main.py  requirements.txt
bot/core/: executor.py  scanner.py  simulator.py
components/: FundingCard.tsx  OpportunityCard.tsx  PaperTradingPanel.tsx  PriceChart.tsx  SettingsModal.tsx  Sidebar.tsx  TickerTape.tsx
lib/: mockData.ts
lib/api/: fetchHistory.ts
lib/hooks/: useCryptoPrices.ts  useMarketData.ts  usePaperTrading.ts
rust_bot/: Cargo.toml
rust_bot/src/: main.rs
